[package]
name = "gaia_assetgen"
description = "Prepares Gaia assets, for use in build scripts"
license = "MIT"
repository = "https://github.com/ucarion/gaia_assetgen"
documentation = "https://docs.rs/ucarion/gaia_assetgen"
version = "0.1.1"
authors = ["Ulysse Carion <ulysse@ulysse.io>"]

[dependencies]
log = "0.3"
error-chain = "0.11"
geo = "0.4"
geojson = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
pretty_env_logger = "0.1"
